samples/_failures_safe/1761631008_72c4c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9d34f57.c: In function ‘main’:
./samples/SAFE/__tmp_a9d34f57.c:151:16: error: ‘EX’ undeclared (first use in this function)
  151 |         return EX
      |                ^~
./samples/SAFE/__tmp_a9d34f57.c:151:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a9d34f57.c:151:18: error: expected ‘;’ at end of input
  151 |         return EX
      |                  ^
      |                  ;
./samples/SAFE/__tmp_a9d34f57.c:151:9: error: expected declaration or statement at end of input
  151 |         return EX
      |         ^~~~~~
./samples/SAFE/__tmp_a9d34f57.c:151:9: error: expected declaration or statement at end of input
